Switch over to fabric api for giant block models