@@ -1,8 +1,7 @@
 package twilightforest.client.model.block.giantblock;
 
 import com.mojang.datafixers.util.Pair;
-import io.github.fabricators_of_create.porting_lib.model.geometry.IGeometryBakingContext;
-import io.github.fabricators_of_create.porting_lib.model.geometry.IUnbakedGeometry;
+import net.minecraft.client.renderer.block.model.BlockModel;
 import net.minecraft.client.renderer.block.model.ItemOverrides;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.client.resources.model.*;
@@ -12,34 +11,40 @@ import net.minecraft.resources.ResourceLocation;
 import java.util.*;
 import java.util.function.Function;
 
-public record UnbakedGiantBlockModel(ResourceLocation parent) implements IUnbakedGeometry<UnbakedGiantBlockModel> {
+public record UnbakedGiantBlockModel(ResourceLocation parent, BlockModel ownerModel) implements UnbakedModel {
 
 	@Override
-	public BakedModel bake(IGeometryBakingContext context, ModelBakery bakery, Function<Material, TextureAtlasSprite> spriteGetter, ModelState modelState, ItemOverrides overrides, ResourceLocation modelLocation) {
+	public BakedModel bake(ModelBakery bakery, Function<Material, TextureAtlasSprite> spriteGetter, ModelState modelState, ResourceLocation modelLocation) {
+		ItemOverrides overrides = ownerModel().getOverrides(bakery, ownerModel, spriteGetter);
 		TextureAtlasSprite[] sprites;
-		if (context.hasMaterial("all")) {
-			sprites = new TextureAtlasSprite[]{spriteGetter.apply(context.getMaterial("all"))};
+		if (ownerModel.hasTexture("all")) {
+			sprites = new TextureAtlasSprite[]{spriteGetter.apply(ownerModel.getMaterial("all"))};
 		} else {
 			ArrayList<TextureAtlasSprite> materials = new ArrayList<>();
 			for (Direction dir : Direction.values()) {
-				materials.add(spriteGetter.apply(context.getMaterial(dir.getName().toLowerCase(Locale.ROOT))));
+				materials.add(spriteGetter.apply(ownerModel.getMaterial(dir.getName().toLowerCase(Locale.ROOT))));
 			}
 			sprites = materials.toArray(new TextureAtlasSprite[]{});
 		}
 
-		return new GiantBlockModel(sprites, spriteGetter.apply(context.getMaterial("particle")), overrides, context.getTransforms());
+		return new GiantBlockModel(sprites, spriteGetter.apply(ownerModel.getMaterial("particle")), overrides, ownerModel.getTransforms());
 	}
 
 	@Override
-	public Collection<Material> getMaterials(IGeometryBakingContext context, Function<ResourceLocation, UnbakedModel> modelGetter, Set<Pair<String, String>> missingTextureErrors) {
-		if (context.hasMaterial("all")) {
-			return List.of(context.getMaterial("all"), context.getMaterial("particle"));
+	public Collection<ResourceLocation> getDependencies() {
+		return Collections.emptyList();
+	}
+
+	@Override
+	public Collection<Material> getMaterials(Function<ResourceLocation, UnbakedModel> modelGetter, Set<Pair<String, String>> missingTextureErrors) {
+		if (ownerModel.hasTexture("all")) {
+			return List.of(ownerModel.getMaterial("all"), ownerModel.getMaterial("particle"));
 		} else {
 			ArrayList<Material> materials = new ArrayList<>();
 			for (Direction dir : Direction.values()) {
-				materials.add(context.getMaterial(dir.getName().toLowerCase(Locale.ROOT)));
+				materials.add(ownerModel.getMaterial(dir.getName().toLowerCase(Locale.ROOT)));
 			}
-			materials.add(context.getMaterial("particle"));
+			materials.add(ownerModel.getMaterial("particle"));
 			return materials;
 		}
 	}
